src/unidaq/UniDaqLibrary.java

package unidaq;

import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.FloatByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.ShortByReference;
import java.nio.ByteBuffer;
import java.nio.FloatBuffer;
import java.nio.IntBuffer;
import java.nio.ShortBuffer;

/**
 * JNA Wrapper for library <b>UniDaq</b><br>
 * This file was autogenerated by
 * <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that
 * <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a
 * few opensource projects.</a>.<br>
 * For help, please visit
 * <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> ,
 * <a href="http://rococoa.dev.java.net/">Rococoa</a>, or
 * <a href="http://jna.dev.java.net/">JNA</a>.
 */
public class UniDaqLibrary implements Library {
	public static final String JNA_LIBRARY_NAME = "UniDaq";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(UniDaqLibrary.JNA_LIBRARY_NAME);
	static {
		Native.register(UniDaqLibrary.class, UniDaqLibrary.JNA_NATIVE_LIB);
	}
	public static final int IXUD_UNI_2V5 = (int) 16;
	public static final int Ixud_InvalidChannelNumber = (int) 14;
	public static final int PIOD56 = (int) 0x800140;
	public static final int Ixud_FIFOOverFlowErr = (int) 33;
	public static final int MAX_CFGCODE_NUMBER = (int) 24;
	public static final int PCI180x = (int) 0x345678;
	public static final int Ixud_ADCCTLTimeoutErr = (int) 20;
	public static final int IXUD_BI_0V5 = (int) 6;
	public static final int IXUD_BI_0V1 = (int) 10;
	public static final int Ixud_InvalidSetting = (int) 22;
	public static final int IXUD_HARDWARE_INT = (int) 1;
	public static final int IXUD_APC_READY_INT = (int) 2;
	public static final int Ixud_CfgCodeIndexErr = (int) 19;
	public static final int Ixud_FindCardIDErr = (int) 39;
	public static final int IXUD_UNI_5V = (int) 15;
	public static final int Ixud_AutoCreateEventErr = (int) 41;
	public static final int PISODA2 = (int) 0x800B00;
	public static final int Ixud_NoErr = (int) 0;
	public static final int ENABLEMEMIO = (int) 2;
	public static final int PISO813 = (int) 0x800A00;
	public static final int PEXC64 = (int) 0x800800;
	public static final int IXUD_AO_BI_10V = (int) 3;
	public static final int PCIM512 = (int) 0xDE9562;
	public static final int Ixud_CreateEventErr = (int) 29;
	public static final int ENABLEDMAAI = (int) 16;
	public static final int IXUD_UNI_0V001 = (int) 22;
	public static final int Ixud_RegThreadErr = (int) 42;
	public static final int PEXP32C32 = (int) 0x800820;
	public static final int PCIFC16 = (int) 0xB13017;
	public static final int PISOC64 = (int) 0x800800;
	public static final int Ixud_SetScanConfigErr = (int) 61;
	public static final int Ixud_RemoveIrqErr = (int) 26;
	public static final int IXUD_ANALOGTRIGGER_LEAVE = (int) 3;
	public static final int PIOD48 = (int) 0x800130;
	public static final int PEXP8R8 = (int) 0x1800FF;
	public static final int PCI100x = (int) 0x341002;
	public static final int Ixud_AllocateMemErr = (int) 23;
	public static final int Ixud_TimeOutErr = (int) 18;
	public static final int PEXDA = (int) 0x800400;
	public static final int PISOP32A32 = (int) 0x800870;
	public static final int IXUD_ANALOGTRIGGER_BELOW = (int) 2;
	public static final int Ixud_DIOModesErr = (int) 8;
	public static final int Ixud_CardIOErr = (int) 58;
	public static final int Ixud_BoardMappingErr = (int) 7;
	public static final int Ixud_DriverNoOpen = (int) 3;
	public static final int Ixud_InvalidValue = (int) 15;
	public static final int Ixud_SetBufInfoErr = (int) 38;
	public static final int PEXP64 = (int) 0x800810;
	public static final int PCI827 = (int) 0xDE3828;
	public static final int Ixud_CreateThreadErr = (int) 31;
	public static final int PCI826 = (int) 0xDE3827;
	public static final int Ixud_InvalidSize = (int) 10;
	public static final int PCI822 = (int) 0xDE3823;
	public static final int IXUD_AO_I_0_20_MA = (int) 16;
	public static final int IXUD_BI_1V25 = (int) 3;
	public static final int Ixud_GetSysBufferErr = (int) 28;
	public static final int PCITMC12 = (int) 0xDF2962;
	public static final int Ixud_InstallIrqErr = (int) 25;
	public static final int PIOD64 = (int) 0x800120;
	public static final int Ixud_ReleaseSpinLock = (int) 48;
	public static final int IXUD_UNI_1V25 = (int) 17;
	public static final int Ixud_SetMapAddressErr = (int) 52;
	public static final int Ixud_UnSupportedFun = (int) 13;
	public static final int MAX_BOARD_NUMBER = (int) 32;
	public static final int IXUD_AO_BI_20V = (int) 5;
	public static final int IXUD_ACTIVE_LOW = (int) 4;
	public static final int Ixud_InvalidOffset = (int) 54;
	public static final int IXUD_BI_0V3125 = (int) 5;
	public static final int Ixud_AcqireSpinLock = (int) 47;
	public static final int PEXD56 = (int) 0x800140;
	public static final int IXUD_BI_5V = (int) 1;
	public static final int IXUD_BI_20V = (int) 23;
	public static final int Ixud_FifoResetErr = (int) 44;
	public static final int Ixud_InvalidBlock = (int) 45;
	public static final int IXUD_BI_2V5 = (int) 2;
	public static final int Ixud_WriteEEPErr = (int) 57;
	public static final int PIOD96 = (int) 0x800110;
	public static final int PISOP8R8 = (int) 0x800830;
	public static final int Ixud_GetAIStatusTimeOut = (int) 17;
	public static final int IXUD_UNI_20V = (int) 13;
	public static final int PISO1730 = (int) 0x800820;
	public static final int Ixud_ReleaseMapAddressErr = (int) 53;
	public static final int IXUD_BI_0V001 = (int) 12;
	public static final int IXUD_AO_UNI_10V = (int) 2;
	public static final int Ixud_GetDriverVersionErr = (int) 4;
	public static final int PIOD168 = (int) 0x800150;
	public static final int PISO730A = (int) 0x800880;
	public static final int IXUD_BI_0V005 = (int) 8;
	public static final int Ixud_SetBufCountErr = (int) 37;
	public static final int PEXD48 = (int) 0x800130;
	public static final int IXUD_UNI_1V = (int) 19;
	public static final int PCI2602 = (int) 0x2CB656;
	public static final int Ixud_SetControlErr = (int) 49;
	public static final int MAX_AOCFGCODE_NUMBER = (int) 6;
	public static final int Ixud_GetMMIOMapStatus = (int) 62;
	public static final int Ixud_InvalidDataCount = (int) 56;
	public static final int PISO730 = (int) 0x800840;
	public static final int Ixud_ClearIntCountErr = (int) 27;
	public static final int Ixud_OpenDriverErr = (int) 1;
	public static final int PEXP16R16 = (int) 0x1800FF;
	public static final int PEXP16POR16 = (int) 0xD61E39;
	public static final int Ixud_GetBufStatus = (int) 36;
	public static final int Ixud_SetScanChannelErr = (int) 60;
	public static final int Ixud_GetIntInstStatus = (int) 35;
	public static final int PISOA64 = (int) 0x800850;
	public static final int Ixud_InstallEventErr = (int) 24;
	public static final int IXUD_ACTIVE_HIGH = (int) 8;
	public static final int PEX100x = (int) 0x341002;
	public static final int PCIP8R8 = (int) 0xD6102B;
	public static final int Ixud_InvalidPortNumber = (int) 11;
	public static final int Ixud_InvalidAddress = (int) 9;
	public static final int MAX_AO_CHANNEL = (int) 32;
	public static final int PISOP16R16U = (int) 0x1800FF;
	public static final int IXUD_UNI_0V1 = (int) 20;
	public static final int Ixud_ExceedBoardNumber = (int) 5;
	public static final int Ixud_InvalidAddr = (int) 46;
	public static final int MULTIPROCESSOR = (int) 1;
	public static final int PISO725 = (int) 0x8008FF;
	public static final int IXUD_BI_10V = (int) 0;
	public static final int MAX_EVENT_NUMBER = (int) 20;
	public static final int IXUD_ANALOGTRIGGER_ABOVE = (int) 1;
	public static final int PISOP32C32 = (int) 0x800820;
	public static final int PEX1202 = (int) 0x345672;
	public static final int IXUD_BI_0V05 = (int) 7;
	public static final int IXUD_UNI_10V = (int) 14;
	public static final int IXUD_UNI_0V01 = (int) 21;
	public static final int Ixud_EventThreadErr = (int) 40;
	public static final int IXUD_UNI_0V625 = (int) 18;
	public static final int IXUD_AO_UNI_5V = (int) 0;
	public static final int PCIP16R16 = (int) 0xD61E39;
	public static final int IXUD_AO_UNI_20V = (int) 4;
	public static final int Ixud_ShareHandleErr = (int) 55;
	public static final int IXUD_AO_BI_5V = (int) 1;
	public static final int PCID64 = (int) 0x2C90B8;
	public static final int Ixud_IOErr = (int) 59;
	public static final int Ixud_PnPDriverErr = (int) 2;
	public static final int IXUD_BI_0V625 = (int) 4;
	public static final int PIOD144 = (int) 0x800100;
	public static final int IXUD_ANALOGTRIGGER_ENTRY = (int) 4;
	public static final int Ixud_UnSupportedModel = (int) 12;
	public static final int Ixud_ThreadTimeOutErr = (int) 32;
	public static final int PISOP64 = (int) 0x800810;
	public static final int PEXP8POR8 = (int) 0xD6102B;
	public static final int PIO821 = (int) 0x800310;
	public static final int Ixud_FIFOTimeOutErr = (int) 34;
	public static final int Ixud_SearchCardErr = (int) 51;
	public static final int PCIM128 = (int) 0xDE9178;
	public static final int Ixud_SearchEventErr = (int) 43;
	public static final int PCIM256 = (int) 0xDE92A6;
	public static final int Ixud_InvalidChannels = (int) 50;
	public static final int IXUD_AO_I_4_20_MA = (int) 17;
	public static final int IXUD_BI_1V = (int) 9;
	public static final int Ixud_FindPCIIndexErr = (int) 21;
	public static final int Ixud_UnSupportedResolution = (int) 30;
	public static final int Ixud_FindBoardErr = (int) 6;
	public static final int Ixud_InvalidMode = (int) 16;
	public static final int PIODA = (int) 0x800400;
	public static final int IXUD_BI_0V01 = (int) 11;
	public static final int PCI1202 = (int) 0x345672;
	public static final int PCIM1024 = (int) 0xDEA074;
	public static final int PCI1602 = (int) 0x345676;

	/**
	 * Original signature : <code>WORD Ixud_GetDllVersion(DWORD*)</code><br>
	 * <i>native declaration : line 238</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetDllVersion(java.nio.IntBuffer)} and
	 *             {@link #Ixud_GetDllVersion(com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetDllVersion(IntByReference dwDLLVer);

	/**
	 * Original signature : <code>WORD Ixud_GetDllVersion(DWORD*)</code><br>
	 * <i>native declaration : line 238</i>
	 */
	public static native short Ixud_GetDllVersion(IntBuffer dwDLLVer);

	/**
	 * Driver functions<br>
	 * Original signature : <code>WORD Ixud_OptionMode(DWORD)</code><br>
	 * <i>native declaration : line 241</i>
	 */
	public static native short Ixud_OptionMode(int dwMode);

	/**
	 * Original signature : <code>WORD Ixud_DriverInit(WORD*)</code><br>
	 * <i>native declaration : line 242</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_DriverInit(java.nio.ShortBuffer)} and
	 *             {@link #Ixud_DriverInit(com.sun.jna.ptr.ShortByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_DriverInit(ShortByReference wTotalBoards);

	/**
	 * Original signature : <code>WORD Ixud_DriverInit(WORD*)</code><br>
	 * <i>native declaration : line 242</i>
	 */
	public static native short Ixud_DriverInit(ShortBuffer wTotalBoards);

	/**
	 * Original signature : <code>WORD Ixud_DriverClose()</code><br>
	 * <i>native declaration : line 243</i>
	 */
	public static native short Ixud_DriverClose();

	/**
	 * Original signature : <code>WORD Ixud_SearchCard(WORD*, DWORD)</code><br>
	 * <i>native declaration : line 244</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_SearchCard(java.nio.ShortBuffer, int)} and
	 *             {@link #Ixud_SearchCard(com.sun.jna.ptr.ShortByReference, int)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_SearchCard(ShortByReference wTotalBoards, int dwModelNo);
